package.json npm

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-scroll": "^1.7.10"
   },
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -b master -d build",
+    // "predeploy": "yarn build",
+    "predeploy": "npm run build",
+    // "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
